# tracked_wheel_robot_without_pid

./: CMakeLists.txt  README.md
config/: advanced_param.yaml
launch/: controller.launch.py
src/: advanced_tank_drive_controller.cpp  tanker2.cpp
tank_drive_controller/: package.xml
tank_drive_controller/config/: param.yaml
tank_drive_controller/include/tank_drive_controller/: advanced_tank_drive_controller.hpp
tank_drive_controller/src/: tank_drive_controller.cpp
